# docsend-to-pdf-skill

./: .gitignore  CHANGELOG.md  README.md  marketplace.json  meta.json
.agents/skills/docsend-to-pdf/: SKILL.md
.claude-plugin/: marketplace.json
.cursor-plugin/: plugin.json
.github/workflows/: release.yml
cli/: pyproject.toml
cli/docsend_to_pdf/: __main__.py  cli.py  client.py  pdf_builder.py  types.py
cli/tests/: conftest.py  test_cli.py  test_client.py  test_pdf_builder.py  test_types.py
cli/tests/fixtures/: authenticated.html  email_gate.html  nda_gate.html  page_data_1.json  passcode_gate.html  rejected.html  verification_gate.html
docs/superpowers/plans/: 2026-04-15-docsend-to-pdf.md
docs/superpowers/specs/: 2026-04-15-docsend-to-pdf-design.md
docsend-to-pdf/.claude-plugin/: plugin.json
docsend-to-pdf/skills/docsend-to-pdf/: SKILL.md
docsend-to-pdf/skills/docsend-to-pdf/references/: cli-usage.md
